<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/kvizovi"
        android:icon="@drawable/quiz"
        android:title="Kvizovi" />
    <item
        android:id="@+id/predmeti"
        android:icon="@drawable/book"
        android:title="Predmeti" />
    <item
        android:id="@+id/predajKviz"
        android:icon="@drawable/sub"
        android:title="Predaj Kviz" />
    <item
        android:id="@+id/zaustaviKviz"
        android:icon="@drawable/stop"
        android:title="Zaustavi kviz" />
</menu>